rasn-compiler-tests/tests/snapshots/simple_types__universalstring_from.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " FQDN ::= UniversalString(FROM (\"a\"..\"z\" | \"A\"..\"Z\" | \"0\"..\"9\" | \".-\")) (SIZE (1..255))"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , size ("1..=255") , from ("\u{2d}" , "\u{2e}" , "\u{30}..=\u{39}" , "\u{41}..=\u{5a}" , "\u{61}..=\u{7a}"))] pub struct FQDN (pub UniversalString) ; }
