rasn-compiler-tests/tests/snapshots/simple_types__utf8_range.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-String ::= UTF8String SIZE (4..6)\n        test-string-val Test-String ::= \"012345\""
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-String" , size ("4..=6"))] pub struct TestString (pub Utf8String) ; pub static TEST_STRING_VAL : LazyLock < TestString > = LazyLock :: new (|| TestString (String :: from ("012345"))) ; }
